<resources>
    <string name="app_name">Subworld</string>
    <!--string name="google_app_id">213058112079</string-->
    <string name="title_activity_game">Subworld</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_app_id">[VALUE]</string>
    <string name="twitter_app_key">[VALUE]</string>
    <string name="twitter_app_secret">[VALUE]</string>
    <string name="google_client_id">[VALUE]</string>
    <string name="chrs_select">Select your character</string>
    <string name="chr_name_hint">Choose a name for your character</string>
    <string name="chrs_name_select">Select your name</string>
    <string name="chr_arch">Archeologist</string>
    <string name="chr_fort_tell">Fortune Teller</string>
    <string name="chr_spy">Spy</string>
    <string name="chr_thief">Thief</string>
    <string name="you_are_here">You are here</string>
    <string name="last_location_longitude">last_longitude</string>
    <string name="last_location_latitude">last_latitude</string>
    <string name="character_screen">Subworld: Character selection</string>
    <string name="action_settings">Settings</string>

    <string name="opendr">Open</string>
    <string name="closedr">Close</string>
    <string name="title_activity_mapbox">MapboxActivity</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiaDRoaCIsImEiOiJjaXBreHJ3OGUwMDg0djVucWRuOXMxcXkxIn0.X30_SvfBjH6UgGM7Qr8L7w</string>
    <string name="desc">An Virtual Geocaching Adventure</string>
    <string name="no_permissions">No permissions to request location updates</string>
    <string name="loc_apis_conn_err">Google Loc Apis connection error</string>
    <string name="statistics">Statistics</string>
    <string name="treasures_found_retrieved">Treasures found/retrieved:</string>
    <string name="robbery_succesful_failed">% Robbery succesful/failed:</string>
    <string name="treasures_lost">Treasures lost:</string>
    <string name="defence_succesful_failed">% Defence succesful/failed:</string>
</resources>
